Fixed bug for triggering the build